Set screen bounds for active window grab when compositor is disabled

Summary:
It failed to capture the window area when the window was outside of the screen and showed a null image to the user when compositor was not enabled.
Now it only captures the area that is on the screen.

BUG: 390652

Reviewers: #spectacle, rkflx, ngraham, broulik

Reviewed By: #spectacle, rkflx, ngraham

Subscribers: davidedmundson, broulik, ngraham

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D10672